Dec 12, 2014 - chris ---------------------------------------------------
o Deprecated HAM_RECORD_NUMBER (use HAM_RECORD_NUMBER64 instead);
	introduced a new flag HAM_RECORD_NUMBER32 for 32bit record numbers

Dec 05, 2014 - chris ---------------------------------------------------
o Added a new parameter HAM_PARAM_POSIX_FADVISE (thanks, Thomas Fähnle)

Nov 28, 2014 - chris ---------------------------------------------------
o Fixed large file support on linux (thanks, Thomas Fähnle)

Nov 27, 2014 - chris ---------------------------------------------------
o Removed dependency to malloc.h
o issue #42: ham_cursor_find returned wrong key w/ approx. matching and
	transactions

Nov 21, 2014 - chris ---------------------------------------------------
o Fixed compilation error on OSX (thanks, Daniel Lemire)

Nov 20, 2014 - chris ---------------------------------------------------
o Fixed compilation error on debian Wheezy, gcc 4.7.2, 32bit (thanks,
	Thomas Fähnle)

Nov 17, 2014 - chris ---------------------------------------------------
o The macro HAM_API_REVISION is now deprecated; use HAM_VERSION_* instead

Nov 16, 2014 - chris ---------------------------------------------------
o The github wiki is now linked into documentation/wiki

Nov 08, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.9

Nov 08, 2014 - chris ---------------------------------------------------
o C# API now supports approx. matching
o C# auto-cleanup of resources no longer can cause segmentation faults

Nov 01, 2014 - chris ---------------------------------------------------
o Removed outdated project files of MSVC2008, added MSVC2013

Oct 15, 2014 - chris ---------------------------------------------------
o Removed custom ham_* typedefs; now using types from stdint.h

Oct 14, 2014 - chris ---------------------------------------------------
o Fixed a failing test from the erlang package
