@@ -1,3 +1,6 @@
+Dec 15, 2014 - chris ---------------------------------------------------
+o Implemented ham_cursor_get_record_size() for remote access
+
 Dec 12, 2014 - chris ---------------------------------------------------
 o Deprecated HAM_RECORD_NUMBER (use HAM_RECORD_NUMBER64 instead);
 	introduced a new flag HAM_RECORD_NUMBER32 for 32bit record numbers
